# signalinator

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
bots/conductinator/: README.md  pyproject.toml
bots/conductinator/src/conductinator/: __init__.py  bot.py
bots/conductinator/src/conductinator/cli/: __init__.py
bots/conductinator/src/conductinator/database/: __init__.py  models.py  repository.py
bots/conductinator/src/conductinator/docker/: __init__.py  client.py
bots/conductinator/tests/: conftest.py  test_bot.py  test_docker_client.py  test_repository.py
bots/decisionator/: README.md  pyproject.toml
bots/decisionator/src/decisionator/: __init__.py  bot.py
bots/decisionator/src/decisionator/cli/: __init__.py
bots/decisionator/src/decisionator/database/: __init__.py  models.py  repository.py
bots/decisionator/src/decisionator/loomio/: __init__.py  client.py  models.py
bots/decisionator/src/decisionator/scheduler/: __init__.py  jobs.py
bots/decisionator/tests/: __init__.py  conftest.py  test_loomio_client.py  test_repository.py
bots/helpinator/: README.md  pyproject.toml
bots/helpinator/src/helpinator/: __init__.py  bot.py  export.py
bots/helpinator/src/helpinator/cli/: __init__.py
bots/helpinator/src/helpinator/database/: __init__.py  models.py  repository.py
bots/helpinator/src/helpinator/relay/: __init__.py  engine.py  session_manager.py
bots/helpinator/tests/: conftest.py  test_helpdesk_export.py  test_helpdesk_notes.py  test_helpdesk_tickets.py  test_relay_engine.py  test_repository.py  test_session_manager.py
bots/informationator/: README.md  pyproject.toml
bots/informationator/src/informationator/: __init__.py  bot.py
bots/informationator/src/informationator/cli/: __init__.py
bots/informationator/src/informationator/database/: __init__.py  models.py  repository.py
bots/informationator/src/informationator/rag/: __init__.py  document_loader.py  embeddings.py  ingestion.py  qa_engine.py  retriever.py  text_chunker.py  vector_store.py
bots/informationator/tests/: __init__.py  conftest.py  test_document_loader.py  test_embeddings.py  test_ingestion.py  test_qa_engine.py  test_repository.py  test_retriever.py  test_text_chunker.py  test_vector_store.py
bots/informinator/: README.md  pyproject.toml
bots/informinator/src/informinator/: __init__.py  bot.py
bots/informinator/src/informinator/cli/: __init__.py
bots/informinator/src/informinator/database/: __init__.py  models.py  repository.py
bots/informinator/src/informinator/relay/: __init__.py  engine.py  session_manager.py
bots/informinator/tests/: conftest.py  test_relay_engine.py  test_repository.py  test_session_manager.py
bots/newsinator/: README.md  pyproject.toml
bots/newsinator/src/newsinator/: __init__.py  bot.py
bots/newsinator/src/newsinator/bluesky/: __init__.py  client.py
bots/newsinator/src/newsinator/cli/: __init__.py
bots/newsinator/src/newsinator/database/: __init__.py  models.py  repository.py
bots/newsinator/src/newsinator/reddit/: __init__.py  client.py
bots/newsinator/src/newsinator/rss/: __init__.py  client.py
bots/newsinator/src/newsinator/scheduler/: __init__.py  jobs.py
bots/newsinator/tests/: __init__.py  conftest.py  test_bluesky_client.py  test_bot.py  test_reddit_client.py  test_repository.py  test_rss_client.py  test_scheduler.py  test_url_validation.py
bots/snackinator/: README.md  pyproject.toml
bots/snackinator/src/snackinator/: __init__.py  bot.py
bots/snackinator/src/snackinator/ai/: __init__.py  ollama_client.py  oracle.py
bots/snackinator/src/snackinator/cli/: __init__.py
bots/snackinator/src/snackinator/database/: __init__.py  models.py  repository.py
bots/snackinator/tests/: test_bot.py  test_oracle.py
bots/summarizinator/: README.md  pyproject.toml
bots/summarizinator/src/summarizinator/: __init__.py  bot.py
bots/summarizinator/src/summarizinator/ai/: __init__.py  ollama_client.py  summarizer.py
bots/summarizinator/src/summarizinator/cli/: __init__.py
bots/summarizinator/src/summarizinator/database/: __init__.py  models.py  repository.py
bots/summarizinator/src/summarizinator/scheduler/: __init__.py  jobs.py
bots/summarizinator/tests/: __init__.py  conftest.py  test_bot.py  test_ollama_client.py  test_repository.py  test_scheduler.py  test_summarizer.py
bots/taginator/: README.md  pyproject.toml
bots/taginator/src/taginator/: __init__.py  bot.py
bots/taginator/src/taginator/cli/: __init__.py
bots/taginator/src/taginator/database/: __init__.py  models.py  repository.py
bots/taginator/tests/: conftest.py  test_bot.py  test_repository.py
bots/transcribinator/: README.md  pyproject.toml
bots/transcribinator/src/transcribinator/: __init__.py  bot.py
bots/transcribinator/src/transcribinator/ai/: __init__.py  ollama_client.py  transcription_cleaner.py
bots/transcribinator/src/transcribinator/cli/: __init__.py
bots/transcribinator/src/transcribinator/database/: __init__.py  models.py  repository.py
bots/transcribinator/src/transcribinator/transcriber/: __init__.py  audio_extractor.py  whisper_transcriber.py
bots/transcribinator/tests/: test_audio_extractor.py  test_bot.py  test_transcription_cleaner.py  test_whisper_transcriber.py
config/: .gitkeep
docker/: all.Dockerfile  conductinator.Dockerfile  decisionator.Dockerfile  helpinator.Dockerfile  informationator.Dockerfile  informinator.Dockerfile  newsinator.Dockerfile  signal-daemon.Dockerfile  snackinator.Dockerfile  summarizinator.Dockerfile  taginator.Dockerfile  transcribinator.Dockerfile
docker/scripts/: signal-entrypoint.sh  signal-setup.py
docs/: migrating-from-informinator.md
scripts/: create-bot.sh  setup-bot.sh
templates/new-bot/: pyproject.toml.template
templates/new-bot/src/: __init__.py.template  bot.py.template
templates/new-bot/src/cli/: __init__.py.template
templates/new-bot/src/database/: __init__.py.template  models.py.template  repository.py.template
