[project]
name = "conductinator"
version = "1.0.0"
description = "Signal bot for managing other Signalinator bot containers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "signalinator-core",
    "docker>=7.0.0",
]

[project.scripts]
conductinator = "conductinator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conductinator"]
