[project]
name = "decisionator"
version = "1.0.0"
description = "Signal bot for group decision-making with Loomio integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "signalinator-core",
    "apscheduler>=3.10.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
decisionator = "decisionator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decisionator"]
