[project]
name = "helpinator"
version = "1.0.0"
description = "Signal help desk bot with ticketing, internal notes, and export"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "signalinator-core",
]

[project.scripts]
helpinator = "helpinator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helpinator"]
