[project]
name = "informationator"
version = "1.0.0"
description = "Signal bot for RAG-based document Q&A with Ollama and ChromaDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "signalinator-core",
    # RAG - Vector database
    "chromadb>=0.4.0",
    # RAG - Document extraction
    "pypdf>=3.17.0",
    "python-pptx>=0.6.21",
    "python-docx>=1.1.0",
    "odfpy>=1.4.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.scripts]
informationator = "informationator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/informationator"]
