[project]
name = "informinator"
version = "1.0.0"
description = "Signal multi-lobby relay bot for anonymous support channels"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "signalinator-core",
]

[project.scripts]
informinator = "informinator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/informinator"]
