[project]
name = "newsinator"
version = "1.0.0"
description = "Signal bot for Reddit and RSS feed aggregation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "signalinator-core",
    "apscheduler>=3.10.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.scripts]
newsinator = "newsinator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsinator"]
