[project]
name = "snackinator"
version = "1.0.0"
description = "The Snack Oracle - wise, dry, judgment-free snack and meal suggestions via Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "signalinator-core",
    "requests>=2.31.0",
]

[project.scripts]
snackinator = "snackinator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snackinator"]
