[project]
name = "summarizinator"
version = "1.0.0"
description = "Signal bot for privacy-focused AI message summarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "signalinator-core",
    "apscheduler>=3.10.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.scripts]
summarizinator = "summarizinator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/summarizinator"]
