[project]
name = "taginator"
version = "1.0.0"
description = "Signal bot for @mentioning all group members"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "signalinator-core",
]

[project.scripts]
taginator = "taginator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taginator"]
